--- a/diabetes_project.ipynb
+++ b/diabetes_project.ipynb
@@ -441,7 +441,7 @@
     }
    ],
    "source": [
-    "print(\"Accuracy model: \", accuracy_score(y_test, predictions))\n",
+    "print(\"Model accuracy: \", accuracy_score(y_test, predictions))\n",
     "\n",
     "c_matrix= confusion_matrix(y_test, predictions, labels= model.classes_)\n",
     "disp= ConfusionMatrixDisplay(confusion_matrix= c_matrix, display_labels= model.classes_)\n",
