--- a/diabetes_project.ipynb
+++ b/diabetes_project.ipynb
@@ -416,7 +416,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model Accuracy:  0.748\n"
+      "Model accuracy:  0.748\n"
      ]
     },
     {
